Small styling fix
About me section was not centered

--- a/components/aboutMe/AboutMeSection.module.css
+++ b/components/aboutMe/AboutMeSection.module.css
@@ -39,6 +39,8 @@
         width: 90vw;
         max-width: 600px;
         width: 95%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
 .aboutMe li {
